# performance-tests

./: .gitignore  Dockerfile.example  Dockerfile.poetry  api_client_get_documents.py  api_client_get_user.py  api_client_issue_physical_card.py  api_client_make_top_up_operation.py  docker_example.py  json_example.py  pydantic_basics.py  pydantic_create_user.py  pydantic_example.py  pyproject.toml  xml_example.py  xml_example.xml
clients/http/: client.py
clients/http/gateway/: client.py
clients/http/gateway/accounts/: client.py  schema.py
clients/http/gateway/cards/: client.py  schema.py
clients/http/gateway/documents/: client.py  schema.py
clients/http/gateway/operations/: client.py  schema.py
clients/http/gateway/users/: client.py  schema.py
tools/: fakers.py
