[tool.poetry]
name = "performance-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^3.2.0"
httpx = "^0.28.1"
shortuuid = "^1.0.13"
pydantic = {extras = ["email"], version = "^2.12.5"}
faker = "^40.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
